--- a/Language/Vi/UIText.xml
+++ b/Language/Vi/UIText.xml
@@ -2415,15 +2415,15 @@ Không.
 	<string name="0xrxw6g7sgx1ljrytf-n332_sgx1" mz="n332">Một cậu bé 12 tuổi</string>
 	<string name="0xrxw6g7icii51-n65_io5k-0" mz="n65">Đèn trắng</string>
 	<string name="0xrxw6g7kbt72ovss-n33_r3n5" mz="close">Xác nhận</string>
-	<string name="0xrxw6g76wk8ljrz1g-n100_6wk8" mz="desc">พิชิต 1 สำนักที่ความยาก [color=#ff0000]วิบาก III[/color] ขึ้นไป</string>
-	<string name="0xrxw6g7j83c2ovua-n301_i8mv" mz="n301">ขับไล่</string>
-	<string name="0xrxw6g7a1h9mg-n156_iqu5" mz="openModUrl">หน้า</string>
-	<string name="0xrxw6g7dyau52ow4i-n76_l5z1" mz="n76">ความคิด</string>
-	<string name="0xrxw6g7wij0ljrz1p-n343_wij0" mz="n343">วิบาก III</string>
-	<string name="0xrxw6g7rjyvljryq1-n276_ke2b" mz="n276">รูปแบบรายชื่อตัวละครด้านบนหน้าจอ โหมดแบบย่อช่วยประหยัดพื้นที่และกระชับข้อมูล</string>
-	<string name="0xrxw6g7dsk6ljryum-n3_g4ar-4" mz="n3">ชุบหลอม</string>
-	<string name="0xrxw6g7a1h9mg-n105_a1h9" mz="n105">ผู้สร้าง:</string>
-	<string name="0xrxw6g7tgna52ow7l-n0_tgna" mz="n0">รับ</string>
+	<string name="0xrxw6g76wk8ljrz1g-n100_6wk8" mz="desc">Một khi đã chinh phục, nơi khó khăn [color=#f 1000] đi lên</string>
+	<string name="0xrxw6g7j83c2ovua-n301_i8mv" mz="n301">Đuổi học</string>
+	<string name="0xrxw6g7a1h9mg-n156_iqu5" mz="openModUrl">Trang</string>
+	<string name="0xrxw6g7dyau52ow4i-n76_l5z1" mz="n76">Ý tưởng</string>
+	<string name="0xrxw6g7wij0ljrz1p-n343_wij0" mz="n343">VIBAK III</string>
+	<string name="0xrxw6g7rjyvljryq1-n276_ke2b" mz="n276">Danh sách các ký tự trên màn hình. Chế độ ngắn tiết kiệm không gian và thắt chặt dữ liệu</string>
+	<string name="0xrxw6g7dsk6ljryum-n3_g4ar-4" mz="n3">Thú vị đấy</string>
+	<string name="0xrxw6g7a1h9mg-n105_a1h9" mz="n105">Người sáng tạo:</string>
+	<string name="0xrxw6g7tgna52ow7l-n0_tgna" mz="n0">Phải</string>
 	<string name="0xrxw6g7kzxt2ovu6-n71_kzxt-0" mz="Head">Một câu đố</string>
 	<string name="0xrxw6g7do0z3a-n7_hdhl" mz="frame">Lớp ủ của công ty</string>
 	<string name="0xrxw6g7kwdl52ow4y-n13_kwdl" mz="frame">Ghi chú</string>
